--- a/s1-getting-started/book-store-notes-final/app/src/main/res/values/themes.xml
+++ b/s1-getting-started/book-store-notes-final/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.BookstoreNotes" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.Book_store_notes" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:statusBarColor">@color/purple_700</item>
     </style>
 </resources>
